<resources>
    <string name="app_name">SimranjeetTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="please_login_or_sign_up_to_continue_our_app">please login or sign up to continue our app</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color="#E02021"><u> Sign Up</u></font></string>
    <string name="don_t_have_an_account_sign_up2">Already have an account? <font color="#E02021"><u>Login</u></font></string>
    <string name="by_creating_an_account_you_have_to_agree_with_our_them_condication"><![CDATA[By creating an account you have to agree with our them & condication.]]></string>
    <string name="american">American</string>
    <string name="italian">Italian</string>
    <string name="asian">Asian</string>
    <string name="mexican">Mexican</string>
</resources>